2004-09-23 22:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (-mouseDown:): Fix the check that detects
	when an unselected row is being dragged.

2004-09-23 18:01  Alexander Malmberg <alexander@malmberg.org>

	* Printing/GSLPR/GSLPRPrintOperation.m (-createContext): Always use
	the path from the info dictionary if it's set.

2004-09-21 23:57  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSCursor.m (_getStandardCursor): Rename to
	getStandardCursor and make static and non-inlined. Update callers.
	* Source/NSTableView.m (computePeriod): Make static.

2004-09-21 18:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSFontInfo.m (-defaultLineHeightForFont): Adjust line
	height calculation.
	* Source/NSButtonCell.m (-drawInteriorWithFrame:inView:): Always
	initialize imageRect and titleRect. Adjust the calculations to match
	the new line height.
	(-cellSize): Always initialize imageRect and titleRect.
	* Headers/AppKit/NSCell.h (-_drawImage:inFrame:isFlipped:): Remove.
	* Source/NSCell.m (-_drawImage:inFrame:isFlipped:): Remove. Move code
	back ...
	(-drawInteriorWithFrame:inView:): ... here.
	* Source/NSToolbarItem.m (+initialize): Remove.
	(+cellClass): Add.

2004-09-18 15:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSServicesManager.m (_serviceFromAnyLocalizedTitle): Rename
	to serviceFromAnyLocalizedTitle and make static.
	* Source/tiff.m (NSTiffWarning): Log tiff warnings using NSDebugLLog
	instead of NSLog.

2004-09-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextFieldCell.m (-initWithCoder:): Moved special
	handling of action mask into non-keyed decoder branch.

2004-09-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, -setFont:, -setImage:):  Use
	method call to change cell type. (Readded this change)
	* Source/NSButtonCell.m (-setType:):  Overwrite super method with
	empty implementation. Patch by Quentin Mathe <qmathe@club-internet.fr>.