@@ -3790,7 +3790,8 @@ static NSView* findByTag(NSView *view, int aTag, unsigned *level)
 	  // We are lucky here, Apple use the same constants
 	  // in the lower bits of the flags
 	  [self setAutoresizingMask: vFlags & 0x3F];
-	  [self setHidden: vFlags & (1 << 32)];
+	  [self setAutoresizesSubviews: ((vFlags & 0x100) == 0x100)];
+	  [self setHidden: ((vFlags & 0x80000000) == 0x80000000)];
 	}
     }
   else
