@@ -1,3 +1,11 @@
+2004-09-24  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSView.m (-initWithCoder:): Added keyed decoding of
+	 "hidden" flag.	
+	* Source/NSCell.m (-initWithCoder:): Added the first bit of
+	keyed flags decoding. Values provided by Adrian Robert
+	<arobert@cogsci.ucsd.edu>. 	 
+	
 2004-09-23 22:33  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/NSTableView.m (-mouseDown:): Fix the check that detects
